# envoy-wasm-rbac

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  envoy.yaml  justfile
.github/workflows/: ci.yml
src/: lib.rs
wasm/0.1.0/: envoy_wasm_rbac.wasm
