[package]
name = "envoy-wasm-rbac"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Winter <winter_dominik@siemens.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-wasm = "0.2.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
jsonwebtoken = { version = "9", default-features = false }
base64 = "0.22.1"

[lib]
crate-type = ["cdylib"]
